# iccad-2022-silkscreen

./: .editorconfig  .gitignore  CMakeLists.txt  compile_commands.json  flake.nix
.github/workflows/: build.yml
src/: main.cpp
testcases/: PublicCase_A.txt  PublicCase_A_Ans.txt  PublicCase_A_Ans_score.txt  PublicCase_B.txt  PublicCase_B_Ans.txt  PublicCase_B_Ans_score.txt  PublicCase_C.txt  PublicCase_C_Ans.txt  PublicCase_C_Ans_score.txt
